Added new % error figures.

--- a/main.tex
+++ b/main.tex
@@ -514,7 +514,7 @@ Also compared are TD-DFT results for this system and that in Carissan and Drujon
 \hline\hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSh & TD-DFT \\
 \hline
-\(\pi - \pi*\) excitation error (\%) & \(\leq\) 12.5 &\(\leq\) 7.3 & \(\leq\) 12.8 & \(\leq\) 14.1 & \(\leq\) 17.2 & \(\leq\) 2.9 \\
+\(\pi - \pi*\) Excitation error (\%) & \(\leq\) 12.5 &\(\leq\) 7.3 & \(\leq\) 12.8 & \(\leq\) 14.1 & \(\leq\) 17.2 & \(\leq\) 2.9 \\
 Ionisation error (\%) & \(\leq\) 7.3 & \(\leq\) 6.3 & \(\leq\) 9.0 & \(\leq\) 10.0 & \(\leq\) 9.7 & - \\
 Singlet HOMO error (\%) & \(\leq\) 3.0 & \(\leq\) 5.3 & \(\leq\) 9.8 & \(\leq\) 12.1 & \(\leq\) 11.4 & - \\
 \hline
@@ -532,9 +532,9 @@ The potentials derived above are also tested on larger systems. Figure \ref{fig:
 \hline\hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
 \hline
-\(\pi - \pi*\) excitation error (\%) & \(\leq\)  &\(\leq\) & \(\leq\)  & \(\leq\)  & \(\leq\)  \\
-Ionisation error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  \\
-Singlet HOMO error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\) \\
+Mean \(\pi - \pi*\) Excitation error (\%) & 3.3 & 1.9 & 1.7 & 6.8 & 6.7 \\
+Mean Ionisation error (\%) & 7.4 & 10.0 & 12.5 & 14.4 & 13.0 \\
+Mean Singlet HOMO error (\%) & 3.4  & 9.3  & 13.4 & 17.1 & 14.7 \\
 \hline
 \end{tabular}
 \label{table:ring_system_errors}
@@ -546,9 +546,9 @@ Singlet HOMO error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq
 \hline\hline
 Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH \\
 \hline
-\(\pi - \pi*\) excitation error (\%) & \(\leq\)  &\(\leq\) & \(\leq\)  & \(\leq\)  & \(\leq\)  \\
-Ionisation error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  \\
-Singlet HOMO error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\) \\
+Mean \(\pi - \pi*\) Excitation error (\%) & \(\leq\)  &\(\leq\) & \(\leq\)  & \(\leq\)  & \(\leq\)  \\
+Mean Ionisation error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  \\
+Mean Singlet HOMO error (\%) & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\)  & \(\leq\) \\
 \hline
 \end{tabular}
 \label{table:long_alkene_errors}
