Added correction list and some corrections.

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -110,6 +110,14 @@
    year = {2000},
    groups = {biblio\_pseudo\_alex}
 }
+
+@book{me_structure_theory,
+   title = "Molecular Electronic-Structure Theory",
+   publisher = {{John Wiley and Sons Ltd}},
+   author = {Helgaker, Trygve and J\o rgensen, Poul and Olsen, Jeppe},
+   year = {2002},
+   groups = {biblio\_pseudo\_alex}
+}
  
 @article{pbe0,
   volume = {105},
@@ -157,6 +165,16 @@
  journal = {Journal of Chemical Theory and Computation},
  author = {M. J. G. Peach and M. J. Williamson and D. J. Tozer},
  year = {2011},
+ groups = {biblio\_pseudo\_alex}
+}
+
+@article{slatersrules,
+ volume = {1},
+ language = {en},
+ number = {36},
+ journal = {Physical Review},
+ author = {Slater, J. C.},
+ year = {1930},
  groups = {biblio\_pseudo\_alex}
 }
 
