--- a/main.tex
+++ b/main.tex
@@ -116,7 +116,12 @@ separate page at the end of the document.
 %% if an abstract is not used by the target journal.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-A pseudo-potential system for recreating an sp\(_{2}\) carbon atom is built and tested as a building block for various pseudo-hydrocarbon chain and ring systems.  This pseudo-system removes all non-valence electrons and has a central charge of 1. 1\textsuperscript{st} ionisation and excitation energies, as well as the HOMO energy, are found to be reproduced to a good accuracy by the pseudo-system.
+A pseudo-potential system for recreating an sp\(^{2}\) carbon atom is built 
+and tested as a building block for various pseudo-hydrocarbon chain and ring systems.  
+This pseudo-system has a central charge of 1, thus it contains only one
+electron. It has been employed in \textsl{ab-initio} calculations:
+1\textsuperscript{st} ionisation and excitation energies, as well as the HOMO energy, 
+are found to be reproduced to a good accuracy by the pseudo-system.
 \end{abstract}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -127,33 +132,44 @@ A pseudo-potential system for recreating an sp\(_{2}\) carbon atom is built and 
 \newcounter{customItem}
 \newcommand{\showCustomItem}{\refstepcounter{customItem}\roman{customItem}}
 
-For most of the quantum chemistry calculations, the system can be divided into two parts:
-the active part, \emph{i.e.} the part of the molecule one is interested in and
-the inactive part, which is to be taken into account in order to fulfill chemical requirements.
-Based on this general statement, many successful approaches were developed.
-One can cite, (\showCustomItem) QM/QM' or QM/MM, which defines two (at least) regions: the active region
-treated at a high level of calculation and the inactive one treated at a lower level of
-theory.\cite{chung_oniom_2015}
-Frozen density embedding techniques (\showCustomItem) replace part of a molecule or its surrounding
+%For most of the quantum chemistry calculations, the system can be divided into two parts:
+%the active part, \emph{i.e.} the part of the molecule one is interested in and
+%the inactive part, which is to be taken into account in order to fulfill chemical requirements.
+It is a common idea that a chemical system can be thought as constituted by (at least) 
+two parts:
+an active one, where most of the chemistry takes place, and an (apparently) inactive
+one, which must be taken into account in order to fulfill chemical requirements.
+Based on this general statement, many successful theoretical approaches were developped.
+Among them,  QM/QM' or QM/MM methods (\showCustomItem) can be cited, where 
+the active region that usually contains several atoms, is
+treated at a high level of calculation, while the inactive part is treated at a 
+lower level of theory.\cite{chung_oniom_2015}
+Frozen density embedding techniques (\showCustomItem) replace part of a molecule or 
+its surrounding
 by a frozen electronic density extracted on a reference system.\cite{wesolowski_frozen-density_2015}
-They are an extension of the frozen core approximation used in the early days to reduce
-the number of parameters to be optimized in the self consistent field calculation.
-In this article we shall focus on pseudo potential techniques, which also
-divide the problem to model into two parts.
-Effective core potentials (\showCustomItem) divide the atomic problem into two pieces: the core electrons are
+They are an extension of the frozen core approximation, already used %in the early days 
+to reduce
+the number of parameters to be optimized in the self consistent field calculation.REF?
+
+In this article we shall focus on pseudo-potential techniques, which also
+divide the chemical problem into two parts.
+Effective core potentials (\showCustomItem) are commonly employed for atoms: 
+core electrons are
 replaced by an operator fast to evaluate and the active electrons are treated
 explicitly.\cite{dolg_relativistic_2012}
 In the same vein, model potentials (\showCustomItem) replace a frozen electronic density (computed on the atom)
-by some operators the number of which depend on the level of
+by some operators, the number of which depends on the level of
 refinement required.\cite{huzinaga_1994_1995}
-The effective group potentials (\showCustomItem) bridge the frozen density and the core potential
-approaches: using core potential extraction techniques, an electronic density is
-replaced by a mono electronic operator.\cite{carissan_what_2006}
 
-When effective core potentials and model potentials intend to reproduce atomic properties,
+The effective group potentials (\showCustomItem) bridge the frozen density and the core potential
+approaches: using core potential extraction techniques, effects due to the implicit 
+electron density are reproduced by a mono-electronic operator.\cite{carissan_what_2006}
+However, while effective core potentials and model potentials intend to 
+reproduce atomic properties,
 effective group potentials aim at mimicking the effect of atoms involved in one or more chemical
-bonds, for instance, the cyclopentadienyl group was successfully extracted.
-In this example, carbon atoms are hybridized: the core/valence distinction is no more defined.
+bonds. The cyclopentadienyl group was, for instance, successfully extracted.
+In this example, carbon atoms are hybridized and the core/valence distinction is not 
+strictly defined.
 Let us follow Huzinaga in his enlightening work.\cite{huzinaga_effective_1991}
 In order to extract a meaningful potential, he states that for electron/electron interactions, 
 "the most important effect is that the exclusion principle prevents active electrons
